--- a/screenmatch/src/main/resources/application.properties
+++ b/screenmatch/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.application.name=screenmatch
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+#gerar logs do que está sendo feito no banco
+spring.jpa.show-sql=false
+spring.jpa.format-sql=false
