--- a/screenmatch/src/main/resources/application.properties
+++ b/screenmatch/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 #gerar logs do que está sendo feito no banco
 spring.jpa.show-sql=false
 spring.jpa.format-sql=false
+
+#mudar o local da porta
+#server.port=8081
